# USB_ETH

./: .gitmodules  .mxproject  CMakeLists.txt  Readme.md  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld  USB_ETH_V1.ioc  build.bat
Core/Inc/: FreeRTOSConfig.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: app_freertos.c  gpio.c  hash.c  main.c  pka.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  usart.c  usb.c
USB_ETH_SDK/: CMakeLists.txt
USB_ETH_SDK/app/: CMakeLists.txt  app.c  app.h  app_config.h
USB_ETH_SDK/app/user/mqtt_app/: mqtt_app.c  mqtt_app.h
USB_ETH_SDK/app/user/shell_app/: shell_app.c  shell_app.h  shell_command_lists.c
USB_ETH_SDK/board/: CMakeLists.txt  board.c  board.h
USB_ETH_SDK/components/: CMakeLists.txt
USB_ETH_SDK/components/lwip/: lwip_port_glue.c  lwipopts.h
USB_ETH_SDK/components/netif/: usb_netif.c  usb_netif.h
USB_ETH_SDK/components/usb/: usb_cdc.c  usb_cdc.h
USB_ETH_SDK/components/usb/config/: tusb_config.h  usb_descriptor.h  usb_descriptors.c
USB_ETH_SDK/services/: CMakeLists.txt
USB_ETH_SDK/services/http_service/: http_service.c  http_service.h
USB_ETH_SDK/services/mqtt_service/: mqtt_service.c  mqtt_service.h
USB_ETH_SDK/services/shell/: cli_shell.c  cli_shell.h
USB_ETH_SDK/services/socket_client/: socketclient.c  socketclient.h
USB_ETH_SDK/services/socket_server/: socketserver.c  socketserver.h
USB_ETH_SDK/services/tcp_server/: tcp_server.c  tcp_server.h
USB_ETH_SDK/utils/cqueue/: CMakeLists.txt  cqueue.c  cqueue.h
USB_ETH_SDK/utils/logger/: CMakeLists.txt  logger.c  logger.h
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
